--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "govuk-frontend": "^4.3.1",
     "sass": "^1.56.1"
   },
   "scripts": {
