--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "esbuild": "^0.15.13",
     "govuk-frontend": "^4.3.1",
     "sass": "^1.56.1"
   },
   "scripts": {
-    "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
+    "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules",
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets"
   }
 }
